--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,1 +1,4 @@
-@import './components/trial.scss'
+@import url('https://fonts.googleapis.com/css2?family=Bonheur+Royale&family=Montserrat:wght@100&display=swap');
+@import './components/trial.scss';
+@import './components/variable.scss';
+@import './components/homepage_layout.scss';
