loader has been added

--- a/styles/components/variable.scss
+++ b/styles/components/variable.scss
@@ -1,1 +1,10 @@
 $bg-color: #fff7fb;
+$header-color: #debfed;
+$ligth-green: #e1efdc;
+$very-light-green: #f7fbf6;
+$semi-light-green: #a3c197;
+/*Loader ball*/
+$ball-diameter: 70px;
+$ball-1-bg-color: #caa8b9;
+$ball-2-bg-color: #f4aeae;
+$ball-3-bg-color: #8cbc8e;
