--- a/styles/components/homepage_layout.scss
+++ b/styles/components/homepage_layout.scss
@@ -4,15 +4,152 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: $bg-color;
+  background-color: $semi-light-green;
 }
 .header{
     background-color: inherit;
     padding: 20px 0;
-    h2{
+    h2{ 
+        background: linear-gradient(90deg, rgba(158, 0, 236,1) 20.5%,rgba(158, 0, 235,1) 20.5%,rgba(243, 72, 104,1) 80.5%);
         font-weight: bolder;
         font-size: 5em;
+        margin: 0;
         background-color: inherit;
         font-family: 'Bonheur Royale', cursive;
+        user-select: none;
+        padding: 20px 0;
+        -webkit-background-clip: text;
+       -webkit-text-fill-color: transparent;
     }
+}
+.search-result-container{
+    display: flex;
+    flex-direction: column;
+    background-color: transparent;
+    width: 1024px;
+    margin: 0 auto;
+    min-height: 50vh;
+    padding: 10px 0;
+    input{
+        width: 400px;
+        font-size: 20px;
+        margin: 0 auto;
+        margin-bottom: 50px;
+        padding: 15px;
+        border-radius: 15px;
+        background-color:  $header-color;
+        height: 50px;
+        border: none;
+        color: white;
+        &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+        color: white;
+        font-weight: 700;
+        }
+        &::-moz-placeholder { /* Firefox 19+ */
+        color: white;
+        font-weight: 700;
+        }
+        &:-ms-input-placeholder { /* IE 10+ */
+        color: white;
+        font-weight: 700;
+        }
+        &:-moz-placeholder { /* Firefox 18- */
+        color: white;
+        font-weight: 700;
+        }
+        &:focus{
+            border: none;
+        }
+    }
+}
+.product-table-container{
+        min-height: 100vh;
+}
+.product-table-wrapper{
+    margin: 20px 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 30px;
+    background-color: transparent;
+    .single-product-item{
+        background-color: white;
+        .single-product-item-img{
+            height: 350px;
+            overflow: hidden;
+            img{
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+            overflow: hidden;
+        }
+        }
+        img:hover{
+            transform: scale(1.1);
+            transition: all 1.4s ease-in-out;
+        }
+        .single-product-item-text{
+           padding: 20px;
+        }
+    }
+}
+/* Loader CSS rules*/
+.loader-container{
+    background-color: transparent;
+    height: 500px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .ball{
+        width: $ball-diameter;
+        height: $ball-diameter;
+        margin: 10px;
+        border-radius: 50%;
+        transform-origin:center ;
+    }
+    .ball-1{
+        background-color: $ball-1-bg-color;
+        animation: ball-one 1.5s ease-in-out 0s infinite forwards;
+    }
+    .ball-2{
+        background-color: $ball-2-bg-color;
+        animation: ball-two 1.5s ease-in-out 0.2s infinite forwards;
+    }
+    .ball-3{
+        background-color: $ball-3-bg-color;
+        animation: ball-three 1.5s ease-in-out 0.3s infinite forwards;
+    }
+}
+@keyframes ball-one {
+    0%{
+        transform: translateY(0);
+            }
+     50%{
+            transform: translateY(-100%);
+        }
+        100%{
+            transform: translateY(0);
+        }
+}
+@keyframes ball-two {
+    0%{
+        transform: translateY(0);
+            }
+     50%{
+            transform: translateY(-100%);
+        }
+        100%{
+            transform: translateY(0);
+        }
+}
+@keyframes ball-three {
+    0%{
+        transform: translateY(0);
+            }
+     50%{
+            transform: translateY(-100%);
+        }
+        100%{
+            transform: translateY(0);
+        }
 }
