--- a/styles/components/homepage_layout.scss
+++ b/styles/components/homepage_layout.scss
@@ -32,32 +32,33 @@
     padding: 10px 0;
     input{
         width: 400px;
-        font-size: 20px;
+        font-size: 18px;
         margin: 0 auto;
         margin-bottom: 50px;
         padding: 15px;
         border-radius: 15px;
-        background-color:  $header-color;
+        background-color:  #c069ea;
         height: 50px;
         border: none;
         color: white;
         &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
         color: white;
-        font-weight: 700;
+        font-weight: 100;
         }
         &::-moz-placeholder { /* Firefox 19+ */
         color: white;
-        font-weight: 700;
+        font-weight: 100;
         }
         &:-ms-input-placeholder { /* IE 10+ */
         color: white;
-        font-weight: 700;
+        font-weight: 100;
         }
         &:-moz-placeholder { /* Firefox 18- */
         color: white;
-        font-weight: 700;
+        font-weight: 100;
         }
         &:focus{
+            outline: none;
             border: none;
         }
     }
