Separated files for single product files

--- a/styles/components/variable.scss
+++ b/styles/components/variable.scss
@@ -3,6 +3,8 @@ $header-color: #debfed;
 $ligth-green: #e1efdc;
 $very-light-green: #f7fbf6;
 $semi-light-green: #a3c197;
+$search-input-bg-color: #c069ea;
+$search-input-text-color: #fEfEfE;
 /*Loader ball*/
 $ball-diameter: 70px;
 $ball-1-bg-color: #caa8b9;
