--- a/styles/components/homepage_layout.scss
+++ b/styles/components/homepage_layout.scss
@@ -37,24 +37,24 @@
         margin-bottom: 50px;
         padding: 15px;
         border-radius: 15px;
-        background-color:  #c069ea;
+        background-color:  $search-input-bg-color;
         height: 50px;
         border: none;
         color: white;
         &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-        color: white;
+        color: $search-input-text-color;
         font-weight: 100;
         }
         &::-moz-placeholder { /* Firefox 19+ */
-        color: white;
+        color: $search-input-text-color;
         font-weight: 100;
         }
         &:-ms-input-placeholder { /* IE 10+ */
-        color: white;
+        color: $search-input-text-color;
         font-weight: 100;
         }
         &:-moz-placeholder { /* Firefox 18- */
-        color: white;
+        color: $search-input-text-color;
         font-weight: 100;
         }
         &:focus{
