--- a/styles/components/homepage_layout.scss
+++ b/styles/components/homepage_layout.scss
@@ -189,3 +189,10 @@
     margin: 10px 0;
 }
 }
+.cart-container{
+    position: absolute;
+    top: 50%;
+    right: 0;
+    width: 70px;
+    height: 70px;
+}
