--- a/styles/components/homepage_layout.scss
+++ b/styles/components/homepage_layout.scss
@@ -190,9 +190,21 @@
 }
 }
 .cart-container{
-    position: absolute;
+    position: fixed;
     top: 50%;
     right: 0;
     width: 70px;
     height: 70px;
+    transform: translateY(-50%);
+    .top-cart{
+        color: white;
+        width: 100%;
+        height: 70px;
+        display: block;
+        z-index: 10000000;
+    }
+}
+.custom-icon{
+    width: 50px;
+    height: 50px;
 }
