--- a/styles/components/homepage_layout.scss
+++ b/styles/components/homepage_layout.scss
@@ -194,17 +194,28 @@
     top: 50%;
     right: 0;
     width: 70px;
-    height: 70px;
     transform: translateY(-50%);
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     .top-cart{
+        padding: 10px 0;
         color: white;
         width: 100%;
-        height: 70px;
-        display: block;
-        z-index: 10000000;
+        background-color: black;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .bottom-cart{
+        background-color: cadetblue;
+        width: 100%;
+        height: 30px;
     }
 }
 .custom-icon{
-    width: 50px;
-    height: 50px;
+   
 }
