all the data are added to an array to display in the cart

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,3 +2,5 @@
 @import './components/trial.scss';
 @import './components/variable.scss';
 @import './components/homepage_layout.scss';
+@import './components/cart.scss';
+
