--- a/styles/components/cart.scss
+++ b/styles/components/cart.scss
@@ -37,8 +37,19 @@
     background-color: rgba(255,255,255,0.5);
     z-index: 1000000;
     .cart-list-container{
-        width: 500px;
+        width: 70em;
         margin: 50px auto;
         background-color: white;
+        height: 90%;
+    }
+}
+.close-btn-wrapper{
+    position: relative;
+    display: block;
+    width: 100%;
+    .close-btn{
+        position: absolute;
+        right: 10px;
+        top: 10px;
     }
 }
