--- a/styles/components/cart.scss
+++ b/styles/components/cart.scss
@@ -37,10 +37,11 @@
     background-color: rgba(255,255,255,0.5);
     z-index: 1000000;
     .cart-list-container{
-        width: 70em;
-        margin: 50px auto;
+        width: 60em;
+        margin: 0 auto;
         background-color: white;
-        height: 90%;
+        height: 100%;
+        overflow-y: scroll;
     }
 }
 .close-btn-wrapper{
@@ -51,5 +52,18 @@
         position: absolute;
         right: 10px;
         top: 10px;
+        font-size: 30px;
+        font-weight: bold;
+    }
+}
+.single-cart-item-wrapper{
+    padding: 50px;
+    background-color: $ball-2-bg-color;
+    .single-cart-item-header{
+        margin: 0;
+    }
+    .single-cart-image{
+        width: 250px;
+        height: auto;
     }
 }
