--- a/styles/components/cart.scss
+++ b/styles/components/cart.scss
@@ -31,13 +31,13 @@
 .cart-list-wrapper{
     position: fixed;
     top: 0;
-    left: 0;
-    width: 100%;
+    bottom: 0;
+    right: 0;
+    width: 30em;
     height: 100%;
     background-color: rgba(255,255,255,0.5);
     z-index: 1000000;
     .cart-list-container{
-        width: 60em;
         margin: 0 auto;
         background-color: white;
         height: 100%;
@@ -45,25 +45,66 @@
     }
 }
 .close-btn-wrapper{
-    position: relative;
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
     display: block;
-    width: 100%;
+    background-color: #333;
+    color: #f2f2f2;
+    text-align: center;
+     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 15px;
+    span{
+        text-transform: uppercase;
+        letter-spacing: 0.2em;
+        font-size: 20px;
+        line-height: 20px;
+    }
     .close-btn{
-        position: absolute;
-        right: 10px;
-        top: 10px;
-        font-size: 30px;
+        padding: 10px 0;
+        margin-left: 10px;
+        font-size: 20px;
         font-weight: bold;
+        color: red;
     }
 }
 .single-cart-item-wrapper{
-    padding: 50px;
+    padding: 30px 0 30px 20px;
     background-color: $ball-2-bg-color;
+    text-align: center;
     .single-cart-item-header{
         margin: 0;
     }
     .single-cart-image{
-        width: 250px;
+        width: 100px;
         height: auto;
+    }
+}
+.cart-list-total-cost-container{
+    position: sticky;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 40px;
+    background-color: khaki;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    line-height: 20px;
+    .left, .right{
+        border: 2px solid black;
+        width: 50%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .right{
+        background-color: black;
+        color: khaki;
     }
 }
