--- a/styles/components/cart.scss
+++ b/styles/components/cart.scss
@@ -39,9 +39,10 @@
     z-index: 1000000;
     .cart-list-container{
         margin: 0 auto;
-        background-color: white;
+        background-color: $ball-2-bg-color;
         height: 100%;
         overflow-y: scroll;
+         scrollbar-color: transparent;
     }
 }
 .close-btn-wrapper{
@@ -73,7 +74,6 @@
 }
 .single-cart-item-wrapper{
     padding: 30px 0 30px 20px;
-    background-color: $ball-2-bg-color;
     text-align: center;
     .single-cart-item-header{
         margin: 0;
